--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-    scroll-behavior:smooth;
+    scroll-behavior:fast;
 }
 
 *{
@@ -9,9 +9,12 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    line-height:1.6;
-    color:#333;
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  background: #020617;
+  overflow-x: hidden;
 }
 
 .navbar{
@@ -38,7 +41,7 @@ body{
 
 .hero{
     height:90vh;
-    background:linear-gradient(to right,#667eea,#764ba2);
+    background:linear-gradient(to right,#000311,#764ba2);
     display:flex;
     align-items:center;
     justify-content:center;
@@ -109,4 +112,175 @@ footer{
     background:black;
     color:white;
     margin-left:10px;
+}
+.project {
+  background: #0f172a;
+  padding: 20px;
+  margin: 25px 0;
+  border-radius: 12px;
+  transition: 0.3s ease;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+}
+
+.project:hover {
+  transform: translateY(-6px);
+}
+
+.project h3 {
+  color: #38bdf8;
+}
+
+.project a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background: #4e6f7d;
+  color: black;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: 600;
+}
+
+
+.hero {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: hidden;
+}
+
+.hero-bg {
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  background: radial-gradient(circle, rgba(32, 31, 29, 0.085), transparent 70%);
+  filter: blur(140px);
+  animation: float 9s ease-in-out infinite;
+}
+
+@keyframes float {
+  0% { transform: translateY(-40px); }
+  50% { transform: translateY(40px); }
+  100% { transform: translateY(-40px); }
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  max-width: 800px;
+  padding: 20px;
+}
+
+.intro {
+  color: #38bdf8;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+}
+
+.name {
+  font-size: 72px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.typing {
+  font-size: 28px;
+  color: #94a3b8;
+  min-height: 40px;
+  margin: 15px 0;
+}
+
+.hero-desc {
+  margin-top: 20px;
+  line-height: 1.7;
+  color: #cbd5e1;
+  font-size: 17px;
+}
+
+
+.hero-buttons {
+  margin-top: 35px;
+}
+
+.btn {
+  padding: 13px 26px;
+  border-radius: 10px;
+  text-decoration: none;
+  margin: 10px;
+  display: inline-block;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.primary {
+  background: #38bdf8;
+  color: black;
+  box-shadow: 0 0 18px rgba(56,189,248,0.6);
+}
+
+.primary:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0 30px rgba(56,189,248,0.9);
+}
+
+.secondary {
+  border: 2px solid #38bdf8;
+  color: #38bdf8;
+}
+
+.secondary:hover {
+  background: #38bdf8;
+  color: black;
+}
+
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(
+    120deg,
+    #020617,
+    #020617,
+    #0f172a,
+    #020617,
+    #020617
+  );
+  background-size: 400% 400%;
+  animation: gradientMove 18s ease infinite;
+  z-index: -2;
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+/* Grid overlay */
+
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background-image:
+    linear-gradient(rgba(56,189,248,0.07) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(56,189,248,0.07) 1px, transparent 1px);
+  background-size: 40px 40px;
+  z-index: -1;
+}
+
+.logo img {
+  height: 90px;
+  width: auto;
+  display: block;
+  filter: drop-shadow(0 0 8px rgba(219, 99, 20, 0.6));
+  transition: 0.3s ease;
+}
+
+.logo img:hover {
+  transform: scale(1.08);
+  filter: neon(0 0 16px rgba(167, 12, 12, 0.9));
 }
